tests/bad_programs/type_errors/undecl_var_in_add_ass.notc
int main() {
    int x = 4;
    int z = x + y;
    return 0;
}
